--- a/frontend/src/styles/pages/_admin.scss
+++ b/frontend/src/styles/pages/_admin.scss
@@ -10,7 +10,7 @@
 
   &-section {
     @media (min-width: 980px) {
-      padding: 0 calc((100% - 880px) / 2);
+      padding: 0 calc((100% - 880px) / 2) 50px calc((100% - 880px) / 2);
       grid-template-columns: repeat(3, 293px);
       display: grid;
     }
